@@ -1069,8 +1069,7 @@ bool Win_GParted::max_amount_prim_reached()
 {
 	//Display error if user tries to create more primary partitions than the partition table can hold. 
 	if ( ! selected_partition .inside_extended && primary_count >= devices[ current_device ] .max_prims )
-	{//FIXME..maybe we should mention the fact the user needs to remove an primary before
-	 //he can add an extended..
+	{
 		Gtk::MessageDialog dialog( 
 			*this,
 			String::ucompose( _("It is not possible to create more than %1 primary partitions"),
@@ -1081,7 +1080,7 @@ bool Win_GParted::max_amount_prim_reached()
 			true ) ;
 		
 		dialog .set_secondary_text(
-			_( "If you want more partitions you should first create an extended partition. Such a partition can contain other partitions.") ) ;
+			_( "If you want more partitions you should first create an extended partition. Such a partition can contain other partitions. Because an extended partition is also a primary partition it might be necessary to remove a primary partition first.") ) ;
 		
 		dialog .run() ;
 		
