@@ -1,3 +1,8 @@
+2006-03-06 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/Win_GParted.cc: made message about max. primary partitions a bit
+	  more informative.
+
 2006-03-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* include/GParted_Core.h,
